--- a/arch/arm/configs/xilinx_zynq_defconfig
+++ b/arch/arm/configs/xilinx_zynq_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.5.0-rc1-14.2-build1 Kernel Configuration
+# Linux/arm 3.5.0-14.2-build2 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -280,7 +280,7 @@ CONFIG_ARCH_ZYNQ=y
 #
 CONFIG_ZYNQ_EARLY_UART1=y
 # CONFIG_ZYNQ_EARLY_UART_EP107 is not set
-CONFIG_XILINX_FIXED_DEVTREE_ADDR=y
+# CONFIG_XILINX_FIXED_DEVTREE_ADDR is not set
 CONFIG_XILINX_L1_PREFETCH=y
 CONFIG_XILINX_L2_PREFETCH=y
 # CONFIG_XILINX_TEST is not set
@@ -1130,7 +1130,6 @@ CONFIG_SPI_MASTER=y
 # CONFIG_SPI_PXA2XX_PCI is not set
 # CONFIG_SPI_XILINX is not set
 CONFIG_SPI_XILINX_PS_QSPI=y
-# CONFIG_XILINX_PS_QSPI_USE_DUAL_FLASH is not set
 CONFIG_SPI_XILINX_PS_SPI=y
 # CONFIG_SPI_DESIGNWARE is not set
 
@@ -1523,6 +1522,7 @@ CONFIG_FB_XYLON_OF=y
 # CONFIG_FB_XYLON_EXT_PIXCLK is not set
 # CONFIG_FB_XYLON_ZYNQ_PS_PIXCLK is not set
 CONFIG_FB_XYLON_ZC702_PIXCLK=y
+# CONFIG_EXYNOS_VIDEO is not set
 # CONFIG_BACKLIGHT_LCD_SUPPORT is not set
 
 #
@@ -1545,21 +1545,17 @@ CONFIG_FONT_8x16=y
 # CONFIG_FONT_10x18 is not set
 # CONFIG_LOGO is not set
 # CONFIG_SOUND is not set
-CONFIG_HID_SUPPORT=y
-CONFIG_HID=y
-# CONFIG_HIDRAW is not set
 
 #
-# USB Input Devices
+# HID support
 #
-CONFIG_USB_HID=y
-# CONFIG_HID_PID is not set
-# CONFIG_USB_HIDDEV is not set
+CONFIG_HID=y
+# CONFIG_HIDRAW is not set
+CONFIG_HID_GENERIC=y
 
 #
 # Special HID drivers
 #
-CONFIG_HID_GENERIC=y
 # CONFIG_HID_A4TECH is not set
 # CONFIG_HID_ACRUX is not set
 # CONFIG_HID_APPLE is not set
@@ -1603,6 +1599,13 @@ CONFIG_HID_MICROSOFT=y
 # CONFIG_HID_THRUSTMASTER is not set
 # CONFIG_HID_ZEROPLUS is not set
 # CONFIG_HID_ZYDACRON is not set
+
+#
+# USB HID support
+#
+CONFIG_USB_HID=y
+# CONFIG_HID_PID is not set
+# CONFIG_USB_HIDDEV is not set
 # CONFIG_USB_ARCH_HAS_OHCI is not set
 CONFIG_USB_ARCH_HAS_EHCI=y
 # CONFIG_USB_ARCH_HAS_XHCI is not set
@@ -2086,6 +2089,8 @@ CONFIG_DEBUG_KERNEL=y
 # CONFIG_DEBUG_SHIRQ is not set
 # CONFIG_LOCKUP_DETECTOR is not set
 # CONFIG_HARDLOCKUP_DETECTOR is not set
+# CONFIG_PANIC_ON_OOPS is not set
+CONFIG_PANIC_ON_OOPS_VALUE=0
 # CONFIG_DETECT_HUNG_TASK is not set
 # CONFIG_SCHED_DEBUG is not set
 # CONFIG_SCHEDSTATS is not set
