Xilinx: ARM: remove initrd from device tree boot args
Now that bootm is being used in u-boot these are i
no longer needed and cause problems. The initrd is
needed if you are not booting the kernel from u-boot
(like from XMD) so you may need to add it back
in.

Signed-off-by: John Linn <john.linn@xilinx.com>
(cherry picked from commit 218a24f96ea78cc1698fd4ac2d3f505e079adf02)

--- a/arch/arm/boot/dts/zynq-afx.dts
+++ b/arch/arm/boot/dts/zynq-afx.dts
@@ -13,7 +13,7 @@
 	};
 
 	chosen {
-		bootargs = "console=ttyPS0,115200 root=/dev/ram rw initrd=0x800000,8M earlyprintk ip=:::::eth0:dhcp";
+		bootargs = "console=ttyPS0,115200 root=/dev/ram rw earlyprintk ip=:::::eth0:dhcp";
 		linux,stdout-path = "/amba@0/uart@E0001000";
 	};
 
