Xilinx: ARM: fixed spi partition name for 770 DC1
The parition name had got changed so that automated
tests were failing. This changes it back so that
tests don't need to change.

Signed-off-by: John Linn <john.linn@xilinx.com>
(cherry picked from commit ae555e1d1e3bc79bdee36f50ca4d08e3fe7d7eb1)

--- a/arch/arm/boot/dts/zynq-zc770-xm010.dts
+++ b/arch/arm/boot/dts/zynq-zc770-xm010.dts
@@ -156,7 +156,7 @@
 				#address-cells = <1>;
 				#size-cells = <1>;
 				partition@test {
-					label = "spi-test";
+					label = "spi-flash";
 					reg = <0x0 0x100000>;
 				};
 			};
