Xilinx: ARM: added SCU WDT to device trees
This allows the SCU WDT to be used.

Signed-off-by: Bryce Kellogg <bryce.kellogg@xilinx.com>
(cherry picked from commit 3aba4c171eebcdb0711c0bb7c6027d5833a00fc6)

--- a/arch/arm/boot/dts/zynq-zc770-xm013.dts
+++ b/arch/arm/boot/dts/zynq-zc770-xm013.dts
@@ -75,6 +75,14 @@
 			reset = <0>;
 		};
 
+		scuwdt@f8f00620 {
+			device_type = "watchdog";
+			compatible = "arm,mpcore_wdt";
+			reg = <0xf8f00620 0x20>;
+			clock-frequency = <400000000>;
+			reset = <1>;
+		};
+
 		spi0: spi@e0006000 {
 			compatible = "xlnx,ps7-spi-1.00.a";
 			reg = <0xE0006000 0x1000>;
