--- a/arch/arm/boot/dts/zynq-zc770-xm012.dts
+++ b/arch/arm/boot/dts/zynq-zc770-xm012.dts
@@ -69,6 +69,14 @@
 			reset = <0>;
 		};
 
+		scuwdt@f8f00620 {
+			device_type = "watchdog";
+			compatible = "arm,mpcore_wdt";
+			reg = <0xf8f00620 0x20>;
+			clock-frequency = <400000000>;
+			reset = <1>;
+		};
+
 		spi1: spi@e0007000 {
 			compatible = "xlnx,ps7-spi-1.00.a";
 			reg = <0xE0007000 0x1000>;
