--- a/arch/arm/boot/dts/zynq-ep107.dts
+++ b/arch/arm/boot/dts/zynq-ep107.dts
@@ -78,6 +78,8 @@
 			compatible = "xlnx,ps7-wdt-1.00.a";
 			reg = <0xF8005000 0x100>;
 			clock-frequency = <2500000>;
+			reset = <0>;
+			timeout = <10>;
 		};
 
 		wdt1: scuwdt@f8f00620 {
