--- a/arch/arm/mach-zynq/Makefile
+++ b/arch/arm/mach-zynq/Makefile
@@ -3,9 +3,7 @@
 #
 
 # Common support
-obj-y	:= common.o timer.o slcr.o \
-		board_ep107.o board_zc702.o board_zc770.o \
-		pl330.o platform_devices.o
+obj-y	:= common.o timer.o slcr.o pl330.o platform_devices.o
 
 obj-$(CONFIG_HOTPLUG_CPU)	+= hotplug.o
 obj-$(CONFIG_SMP)		+= platsmp.o
