--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -988,6 +988,7 @@ config ARCH_ZYNQ
 	select ARCH_HAS_CPUFREQ
 	select ARCH_HAS_OPP
 	select IPIPE_ARM_KUSER_TSC if IPIPE
+	select MIGHT_HAVE_PCI
 	help
 	  Support for Xilinx Zynq ARM Cortex A9 Platform
 endchoice
