ipipe: Make context in add/sub_preempt_count conditional
Non-legacy I-pipe users do not break the usability of
current_thread_info() via their own kernel stacks. Also, there is at
least x86_64 that already allows to call current_thread_info() even
over foreign kernel stacks. At the same time, we have to allow
preempt_disable/enable over non-root domain in order to support ftrace,
perf and NMIs in a maintainable way.

This patch makes our instrumentation of add/sub_preempt_count
conditional, disabling it for non-legacy use case or when an
architecture selects CONFIG_IPIPE_HAVE_SAFE_THREAD_INFO.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/kernel/ipipe/Kconfig
+++ b/kernel/ipipe/Kconfig
@@ -54,3 +54,6 @@ config HAVE_IPIPE_HOSTRT
 
 config IPIPE_DELAYED_ATOMICSW
        def_bool y if IPIPE_LEGACY
+
+config IPIPE_HAVE_SAFE_THREAD_INFO
+	bool
