x86/ipipe: x86_64 provides context-agnostic current_thread_info
Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -23,6 +23,7 @@ config X86
 	def_bool y
 	select IPIPE_HAVE_HOSTRT if IPIPE
 	select IPIPE_HAVE_VM_NOTIFIER if IPIPE
+	select IPIPE_HAVE_SAFE_THREAD_INFO if X86_64
 	select HAVE_AOUT if X86_32
 	select HAVE_UNSTABLE_SCHED_CLOCK
 	select ARCH_SUPPORTS_NUMA_BALANCING
