zynq: Initial IPIPE support

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -987,6 +987,7 @@ config ARCH_ZYNQ
 	select COMMON_CLK
 	select ARCH_HAS_CPUFREQ
 	select ARCH_HAS_OPP
+	select IPIPE_ARM_KUSER_TSC if IPIPE
 	help
 	  Support for Xilinx Zynq ARM Cortex A9 Platform
 endchoice
